cambio en load image

--- a/TP1/EntregaFinal/index.html
+++ b/TP1/EntregaFinal/index.html
@@ -34,7 +34,11 @@
 
             <button type="button" class="btn">guardar</button>
           </div>
-        <canvas id="dibujo" width="600" height="500" style="border: solid 1px black;"></canvas>
+          <div  style= "overflow: auto;">
+            <canvas id="dibujo" width="800" height="600" style="border: solid 1px black;"></canvas>
+          </div>
+
+       
         
     </div>
   <script src="js/script.js"></script>
