--- a/TP1/EntregaFinal/index.html
+++ b/TP1/EntregaFinal/index.html
@@ -13,12 +13,12 @@
     <h1>Entrega del trabajo</h1>
     <div style="display: flex; flex-direction: row; justify-content: left; align-items: flex-start;">
         <div class="btn-group-vertical" role="group" aria-label="Button group with nested dropdown">
-            <button type="button" class="btn "><i class="bi bi-pencil-fill"></i></button>
-            <button type="button" class="btn "><i class="bi bi-eraser-fill"></i></button>
+            <button type="button" class="btn " id="lapiz"><i class="bi bi-pencil-fill"></i></button>
+            <button type="button" class="btn " id="goma"><i class="bi bi-eraser-fill"></i></button>
             <label for="color">Color</label>
             <input type="color" id="color" class="border-0 rounded-pill" />
-            <label for="tam">Tamaño</label>
-            <input type="range" class="rounded-pill btn btn-primary" id="tam" min="1" max="25" value="1" />
+            <label for="tamano">Tamaño</label>
+            <input type="range" class="rounded-pill btn btn-primary" id="tamano" min="1" max="25" value="1" />
           
             <div class="btn-group-vertical" role="group">
               <button id="btnGroupDrop1" type="button" class="btn btn-primary dropdown-toggle" data-bs-toggle="dropdown" aria-expanded="false">
