como siempre a ultima hora

--- a/TP1/EntregaFinal/index.html
+++ b/TP1/EntregaFinal/index.html
@@ -11,7 +11,12 @@
     <title>Entrega Visualizacion</title>
 </head>
 <body>
-    <h1>Entrega del trabajo</h1>
+  <div class="container">
+    <div class="row justify-content-center">
+      <h1 >Entrega del TP1</h1>
+    </div>
+  </div>
+    
     <div style="display: flex; flex-direction: row; justify-content: left; align-items: flex-start;">
         <div class="btn-group-vertical" role="group" aria-label="Button group with nested dropdown">
             <button type="button" class="btn " id="lapiz"><i class="bi bi-pencil-fill"></i></button>
