--- a/TP1/EntregaFinal/index.html
+++ b/TP1/EntregaFinal/index.html
@@ -31,11 +31,11 @@
                 filtros
               </button>
               <ul class="dropdown-menu" aria-labelledby="btnGroupDrop1">                
-                <li><a class="dropdown-item" id="brillo" href="#">brillo</a></li>
-                <li><a class="dropdown-item" id="sepia" href="#">sepia</a></li>
-                <li><a class="dropdown-item" id="negativo" href="#">negativo</a></li>
-                <li><a class="dropdown-item" id="binarizar" href="#">inarizacion</a></li>
-                <li><a class="dropdown-item" id="blur" href="#">BLUR</a></li>
+                <li><a class="dropdown-item" id="brillo" href="#">Brillo</a></li>
+                <li><a class="dropdown-item" id="sepia" href="#">Sepia</a></li>
+                <li><a class="dropdown-item" id="negativo" href="#">Negativo</a></li>
+                <li><a class="dropdown-item" id="binarizar" href="#">Binarizacion</a></li>
+                <li><a class="dropdown-item" id="blur" href="#">Blur</a></li>
                 <li><label for="saturacion">Saturar</label>
                   <input type="range" class="rounded-pill btn btn-primary" id="saturacion" min="0" max="10" value="0" />
                 </li>
