Andando tablero con moviemitno de fichas falta logica de Win

--- a/TP2/EntregaFinal/index.html
+++ b/TP2/EntregaFinal/index.html
@@ -10,14 +10,17 @@
 
 
 
-    <canvas id="id-canvas" width="800" height="800"  style="border: 1px black solid;">
+    <canvas id="id-canvas" width="1200" height="800"  style="border: 1px black solid;">
 
     </canvas>
 
 
 
-    <img src="./img/tablerobien.png" id="imgTablero" style="display: none;">
+    <img src="./img/7x6 (4 en linea).png" id="img4Linea" style="display: none;">
+    <img src="./img/9x8 (5 en linea).png" id="img5Linea" style="display: none;">
+    <img src="./img/11x10 (6 en linea).png" id="img6Linea" style="display: none;">
 
+    <script src="./Scripts/Bitacora.js" ></script>
     <script src="./Scripts/Figura.js" ></script>
     <script src="./Scripts/Ficha.js" ></script>
     <script src="./Scripts/Tablero.js" ></script>    
