Comprobando si termina el juego .. faltan las diagonales

--- a/TP2/EntregaFinal/index.html
+++ b/TP2/EntregaFinal/index.html
@@ -17,9 +17,10 @@
 
 
     <img src="./img/7x6 (4 en linea).png" id="img4Linea" style="display: none;">
-    <img src="./img/9x8 (5 en linea).png" id="img5Linea" style="display: none;">
-    <img src="./img/11x10 (6 en linea).png" id="img6Linea" style="display: none;">
-
+    <!--<img src="./img/9x8 (5 en linea).png" id="img5Linea" style="display: none;">-->
+    <!-- <img src="./img/11x10 (6 en linea).png" id="img6Linea" style="display: none;">-->
+    <img src="./img/11x10-(6-en-linea).png" id="img6Linea" style="display: none;">-->
+    <img src="./img/9x8-(5-en-linea).png" id="img5Linea" style="display: none;">
     <script src="./Scripts/Bitacora.js" ></script>
     <script src="./Scripts/Figura.js" ></script>
     <script src="./Scripts/Ficha.js" ></script>
