--- a/TP2/EntregaFinal/index.html
+++ b/TP2/EntregaFinal/index.html
@@ -1,30 +1,72 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css"
+        integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
+    <link rel="stylesheet" href="./css/style.css">
+    <title>Entregable TP 2</title>
     <title>Document</title>
-</head>
-<body>
+  </head>
+  <body>
+    <div class="bodyjuego">
+      <div class="presentacion">
+        <h1>4 en Linea</h1>
+       
+        <label for="puntosRojo"><strong>Jugador Rojo: </strong></label>
+        <input
+          type="text"
+          id="puntosRojo"
+          class="btn btn-danger"
+          value=""
+          disabled
+        />
+        <label for="puntosAmarillo"><strong>Jugador Amarillo: </strong></label>
+        <input
+          type="text"
+          id="puntosAmarillo"
+          class="btn btn-warning"
+          value=""
+          disabled
+        />
 
+        <button id="reiniciar" class="btn btn-success">
+          Reiniciar Partida
+        </button>
+        <button id="reiniciarJ" class="btn btn-success">Reiniciar Juego</button>
+      </div>
+      <canvas
+        id="id-canvas"
+        width="1200"
+        height="800"
+        style="border: 1px black solid"
+      >
+      </canvas>
+    </div>
 
-
-    <canvas id="id-canvas" width="1200" height="800"  style="border: 1px black solid;">
-
-    </canvas>
-
-
-
-    <img src="./img/7x6 (4 en linea).png" id="img4Linea" style="display: none;">
+    <img
+      src="./img/7x6 (4 en linea).png"
+      id="img4Linea"
+      style="display: none"
+    />
     <!--<img src="./img/9x8 (5 en linea).png" id="img5Linea" style="display: none;">-->
     <!-- <img src="./img/11x10 (6 en linea).png" id="img6Linea" style="display: none;">-->
-    <img src="./img/11x10-(6-en-linea).png" id="img6Linea" style="display: none;">-->
-    <img src="./img/9x8-(5-en-linea).png" id="img5Linea" style="display: none;">
-    <script src="./Scripts/Bitacora.js" ></script>
-    <script src="./Scripts/Figura.js" ></script>
-    <script src="./Scripts/Ficha.js" ></script>
-    <script src="./Scripts/Tablero.js" ></script>    
+    <img
+      src="./img/11x10-(6-en-linea).png"
+      id="img6Linea"
+      style="display: none"
+    />
+    <img
+      src="./img/9x8-(5-en-linea).png"
+      id="img5Linea"
+      style="display: none"
+    />
+    <script src="./Scripts/Bitacora.js"></script>
+    <script src="./Scripts/Figura.js"></script>
+    <script src="./Scripts/Ficha.js"></script>
+    <script src="./Scripts/Tablero.js"></script>
     <script src="./Scripts/main.js"></script>
-</body>
+  </body>
 </html>
