Juego andando modularizado, falta imagen Dead

--- a/TP3/EntregaFinal/index.html
+++ b/TP3/EntregaFinal/index.html
@@ -28,13 +28,13 @@
         <div class="escena layer5"></div>
 
       
-        <!-- <div class="escena2 layer1-2"></div>
+        <div class="escena2 layer1-2"></div>
         <div class="escena2 layer3-2"></div>
         <div class="escena2 layer4-2"></div>
         <div class="escena2 layer5-2"></div>
         <div class="escena2 layer6-2"></div>
         <div class="escena2 layer7-2"></div>
-        <div class="escena2 layer8-2"></div> -->
+        <div class="escena2 layer8-2"></div> 
       
       <div id="subcontent">
         <div class="avatar viva" > </div>      
