se agrega footer y card

--- a/TP5/EntregaFinal/index.html
+++ b/TP5/EntregaFinal/index.html
@@ -27,7 +27,7 @@
 
         <section class="section-central">
             <article class="addPost">
-                <img class="fotoPerfil" src="./img/perfil/fotoPerfil.png" alt="">
+                <img class="fotoPerfil" src="./img/publicaciones/publi1.png" alt="">
                 <div>
                     <text></text>
                 </div>               
@@ -53,6 +53,25 @@
                 <img src="./img/publicaciones/publi1.png" alt="">
 
             </article>
+
+
+            <article class="publicacion">
+                <header class="hpublicacion">
+                    <img class="fotoPerfil" src="./img/perfil/fotoPerfil.png" alt="">
+                    <div class="hpinfo">
+                        <h4>PAULDERM</h4>
+                        <span>Publicidad</span>
+                    </div>                   
+                    
+                </header>
+   
+
+                <img src="./img/publicidad/publicidad1.png" alt="">
+
+            </article>
+
+
+
             <article class="publicacion">
                 <header class="hpublicacion">
                     <img class="fotoPerfil" src="./img/perfil/fotoPerfil.png" alt="">
