--- a/TP5/EntregaFinal/listChat.html
+++ b/TP5/EntregaFinal/listChat.html
@@ -8,8 +8,9 @@
     <script type="module" src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"></script>
     <script nomodule src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js"></script>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.7.1/font/bootstrap-icons.css">
-    
-    <title>Chat</title>
+</head>
+<body>   
+    <title>List Chat</title>
     <header class="iconChat">
         <h2 class="posTextChatInHeader">Chat</h2>
         <div class="searchInChat">
@@ -174,8 +175,7 @@
 
     </div>
 
-</head>
-<body>
+
     
 </body>
 </html>
