--- a/TP5/EntregaFinal/index.html
+++ b/TP5/EntregaFinal/index.html
@@ -51,6 +51,20 @@
                 </aside>
 
                 <img src="./img/publicaciones/publi1.png" alt="">
+                <section class="reaction">
+                    <i class="bi bi-hand-thumbs-up-fill">99</i>
+                    <i class="bi bi-chat-square-text-fill">100</i>
+
+                </section>
+
+                <section class="botonera-reaction">
+
+                    <i class="bi bi-hand-thumbs-up-fill"></i>
+                    <i class="bi bi-hand-thumbs-down-fill"></i>
+                    <i class="bi bi-chat-square-text-fill"></i>
+                    <i class="bi bi-share-fill"></i>
+
+                </section>
 
             </article>
 
