--- a/TP5/EntregaFinal/listChat.html
+++ b/TP5/EntregaFinal/listChat.html
@@ -8,6 +8,7 @@
     <script type="module" src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"></script>
     <script nomodule src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js"></script>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.7.1/font/bootstrap-icons.css">
+    <script src="./js/script.js"></script>
 </head>
 <body>   
     <title>List Chat</title>
@@ -24,14 +25,14 @@
     </header>
 
     <div class="section-central">
-    <article >
+    <article id="chat1">
         <header class="hpublicacion">
             <img class="fotoPerfil" src="./img/perfil/fotoPerfil.png" alt="">
             <div class="hpinfo">
                 <h4><i class="bi bi-circle-fill onLine"></i>  Costa Pablo</h4>
                 <div class="ultimoChat">
                     <div>
-                        <span class="posIconSearch">Chau</span>
+                        <span class="posIconSearch">No hay de que !!</span>
                     </div>
                     <div>
                         <span class="posCloseChatInHeader">Nov 05 13:55 Hs</span>
@@ -175,7 +176,10 @@
 
     </div>
 
-
+    <div id="load" class="loading oculto">
+        <p>Cargando ...</p>
+        <img class="centrarLoading rotar" src="./img/icon/logo.png" alt="">
+    </div>
     
 </body>
 </html>
