--- a/TP5/EntregaFinal/chatIndividual.html
+++ b/TP5/EntregaFinal/chatIndividual.html
@@ -8,7 +8,7 @@
     <script type="module" src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"></script>
     <script nomodule src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js"></script>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.7.1/font/bootstrap-icons.css">
-    
+    <script src="./js/scriptChatIndividual.js"></script>
     <title>Nuevo Chat</title>
 </head>
     
@@ -26,7 +26,7 @@
             </div>                   
             <div class="posCloseChatInHeaderPosRow">
                 <i class="icon2 bi bi-camera-video-fill"></i>
-                <ion-icon class="icon" name="close-outline"></ion-icon>
+                <ion-icon id="closeChat" class="icon" name="close-outline"></ion-icon>
             </div>
         </header>  
 
