--- a/TP5/EntregaFinal/listChat.html
+++ b/TP5/EntregaFinal/listChat.html
@@ -8,7 +8,7 @@
     <script type="module" src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"></script>
     <script nomodule src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js"></script>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.7.1/font/bootstrap-icons.css">
-    <script src="./js/script.js"></script>
+    <script src="./js/scriptChat.js"></script>
 </head>
 <body>   
     <title>List Chat</title>
@@ -19,7 +19,7 @@
             <text class="textSearch" >Buscar en Chat</text>
         </div>
         <div class="posCloseChatInHeader">
-            <ion-icon class="icon" name="close-outline"></ion-icon>
+            <ion-icon id="iconCloseChatList" class="icon" name="close-outline"></ion-icon>
             
         </div>
     </header>
@@ -27,7 +27,7 @@
     <div class="section-central">
     <article id="chat1">
         <header class="hpublicacion">
-            <img class="fotoPerfil" src="./img/perfil/fotoPerfil.png" alt="">
+            <img class="fotoPerfil" src="./img/perfil/pabloCosta2.png" alt="">
             <div class="hpinfo">
                 <h4><i class="bi bi-circle-fill onLine"></i>  Costa Pablo</h4>
                 <div class="ultimoChat">
@@ -46,7 +46,7 @@
 
     <article >
         <header class="hpublicacion">
-            <img class="fotoPerfil" src="./img/perfil/fotoPerfil.png" alt="">
+            <img class="fotoPerfil" src="./img/perfil/perfilVaron.jpg" alt="">
             <div class="hpinfo">
                 <h4><i class="bi bi-circle-fill onLine"></i>  Alcorta Diego</h4>
                 <div class="ultimoChat">
@@ -83,7 +83,7 @@
     </article>
     <article >
         <header class="hpublicacion">
-            <img class="fotoPerfil" src="./img/perfil/fotoPerfil.png" alt="">
+            <img class="fotoPerfil" src="./img/perfil/perfilWoman2.jpg" alt="">
             <div class="hpinfo">
                 <h4><i class="bi bi-circle-fill ausente"></i>  Costes Laura</h4>
                 <div class="ultimoChat">
@@ -101,7 +101,7 @@
     </article>
     <article >
         <header class="hpublicacion">
-            <img class="fotoPerfil" src="./img/perfil/fotoPerfil.png" alt="">
+            <img class="fotoPerfil" src="./img/perfil/perfilWoman3.jpg" alt="">
             <div class="hpinfo">
                 <h4><i class="bi bi-circle-fill ausente"></i>  Tomas Maia</h4>
                 <div class="ultimoChat">
@@ -119,7 +119,7 @@
     </article>
     <article >
         <header class="hpublicacion">
-            <img class="fotoPerfil" src="./img/perfil/fotoPerfil.png" alt="">
+            <img class="fotoPerfil" src="./img/perfil/perfilVaron2.jpg" alt="">
             <div class="hpinfo">
                 <h4><i class="bi bi-circle-fill offLine"></i>  Castro Alberto</h4>
                 <div class="ultimoChat">
@@ -137,7 +137,7 @@
     </article>
     <article >
         <header class="hpublicacion">
-            <img class="fotoPerfil" src="./img/perfil/fotoPerfil.png" alt="">
+            <img class="fotoPerfil" src="./img/perfil/perfilWoman4.jpg" alt="">
             <div class="hpinfo">
                 <h4><i class="bi bi-circle-fill offLine"></i>  Mauro Maria</h4>
                 <div class="ultimoChat">
@@ -155,7 +155,7 @@
     </article>
     <article >
         <header class="hpublicacion">
-            <img class="fotoPerfil" src="./img/perfil/fotoPerfil.png" alt="">
+            <img class="fotoPerfil" src="./img/perfil/chrisNagy.jpg" alt="">
             <div class="hpinfo">
                 <h4><i class="bi bi-circle-fill offLine"></i>  Nagy Christian</h4>
                 <div class="ultimoChat">
