--- a/TP5/EntregaFinal/search.html
+++ b/TP5/EntregaFinal/search.html
@@ -18,7 +18,7 @@
             <input type="text" class="inp-search" placeholder="Buscar en SocialVet">  
             <i class="bi bi-search icon-search"></i>       
         </div>
-       <i class="bi bi-x cerrar"></i>
+       <i id="closeSearch"class="bi bi-x cerrar"></i>
 
     </header>
     <nav class="filter-search">
@@ -150,7 +150,7 @@
     
     <footer class="footer">
 
-        <i class="bi bi-house-door-fill"></i>
+        <i id="botonHome" class="bi bi-house-door-fill"></i>
         <i class="bi bi-search"></i>
         <i class="bi bi-person-fill"></i>
 
