--- a/TP5/EntregaFinal/comentar.html
+++ b/TP5/EntregaFinal/comentar.html
@@ -24,12 +24,12 @@
 
 
             <article class="comentario">
-                <img class="fotoPerfilComent" src="./img/publicaciones/publi1.png" alt="">
+                <img class="fotoPerfilComent" src="./img/perfil/perfilVaron.jpg" alt="">
                 <section class="sec-comentario">
-                    <header> <h4>Nombre usuario</h4> </header>
+                    <header> <h4>Diego Alcorta</h4> </header>
 
                      <text>
-                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Similique, veniam expedita quo ratione a deleniti itaque ab, qui rerum incidunt laboriosam velit modi corporis sunt inventore. Dicta, ratione temporibus. Labore?
+                        Buienas tengo un amigo que tiene uno !! ya te paso el contacto es re copado el loco y el perro tiene la edad q estas buscando
                      </text>   
                 </section>
 
@@ -37,12 +37,12 @@
 
 
             <article class="comentario">
-                <img class="fotoPerfilComent" src="./img/publicaciones/publi1.png" alt="">
+                <img class="fotoPerfilComent" src="./img/perfil/perfilVaronSearchPerson5.jpg" alt="">
                 <section class="sec-comentario">
-                    <header> <h4>Nombre usuario</h4> </header>
+                    <header> <h4>Diego Torresini</h4> </header>
 
                      <text>
-                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Similique, veniam expedita quo ratione a deleniti itaque ab, qui rerum incidunt laboriosam velit modi corporis sunt inventore. Dicta, ratione temporibus. Labore?
+                       Traela a casa !! tengo uno.
                      </text>   
                 </section>
 
@@ -50,12 +50,12 @@
 
 
             <article class="comentario">
-                <img class="fotoPerfilComent" src="./img/publicaciones/publi1.png" alt="">
+                <img class="fotoPerfilComent" src="./img/perfil/perfilWoman4.jpg" alt="">
                 <section class="sec-comentario">
-                    <header> <h4>Nombre usuario</h4> </header>
+                    <header> <h4>Mauro Maria</h4> </header>
 
                      <text>
-                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Similique, veniam expedita quo ratione a deleniti itaque ab, qui rerum incidunt laboriosam velit modi corporis sunt inventore. Dicta, ratione temporibus. Labore?
+                       Quiero un cachorro cuando los tengan los vendes ?
                      </text>   
                 </section>
 
@@ -93,7 +93,7 @@
         
             <input type="text" class="inpcomentar" placeholder="Escribi un comentario..">
 
-            <i class="bi bi-send-fill send"></i>
+            <i id="close" class="bi bi-send-fill send"></i>
         
 
     </footer>
