--- a/TP5/EntregaFinal/search.html
+++ b/TP5/EntregaFinal/search.html
@@ -22,7 +22,7 @@
 
     </header>
     <nav class="filter-search">
-        <button id="btn-all">Todos</button>
+        <button id="btn-all" class="activo">Todo</button>
         <button id="btn-prof">Profesionales</button>
         <button id="btn-perf">Perfiles</button>
         <button id="btn-publi" >Publicaciones</button>
